# hidapi

./: AUTHORS.txt  CMakeLists.txt  README.txt  build.sh  cleanup.sh
cmake/: i686-linux.cmake  osx.cmake
include/: hidapi.h
src/hidtest/: hidtest.cpp
src/linux/: hid.c
src/linux-libusb/: hid.c
src/osx/: hid.c
src/windows/: hid.c
